--- a/app/src/main/res/layout/content_note.xml
+++ b/app/src/main/res/layout/content_note.xml
@@ -64,4 +64,13 @@
         app:layout_constraintLeft_toLeftOf="@+id/text_note_title"
         app:layout_constraintRight_toRightOf="@+id/text_note_title"
         app:layout_constraintTop_toBottomOf="@+id/text_note_title"/>
+
+    <view
+        android:id="@+id/view2"
+        class="com.jwhh.jim.notekeeper.ModuleStatusView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/text_note_text"
+        app:layout_constraintTop_toBottomOf="@+id/text_note_text" />
+
 </android.support.constraint.ConstraintLayout>
